@@ -34,6 +34,9 @@ import net.sumaris.core.exception.SumarisTechnicalException;
 import net.sumaris.core.model.data.Landing;
 import net.sumaris.core.model.data.Trip;
 import net.sumaris.core.model.data.VesselUseMeasurement;
+import net.sumaris.core.model.referential.SaleType;
+import net.sumaris.core.model.referential.SaleTypeEnum;
+import net.sumaris.core.service.referential.ReferentialService;
 import net.sumaris.core.service.referential.pmfm.PmfmService;
 import net.sumaris.core.util.Beans;
 import net.sumaris.core.util.DataBeans;
@@ -47,10 +50,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
 
-import java.util.Collection;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service("tripService")
@@ -91,6 +91,9 @@ public class TripServiceImpl implements TripService {
     @Autowired
     private ObservedLocationDao observedLocationDao;
 
+    @Autowired
+    protected ReferentialService referentialService;
+
     @Override
     public List<TripVO> getAllTrips(int offset, int size) {
         return findByFilter(null, offset, size, null, null, DataFetchOptions.builder().build());
@@ -115,7 +118,7 @@ public class TripServiceImpl implements TripService {
 
     @Override
     public TripVO get(int tripId) {
-        return tripRepository.get(new Integer(tripId));
+        return tripRepository.get(Integer.valueOf(tripId));
     }
 
     @Override
@@ -180,21 +183,8 @@ public class TripServiceImpl implements TripService {
         // Save
         TripVO savedTrip = tripRepository.save(source);
 
-        // Save sales
-        if (CollectionUtils.isNotEmpty(source.getSales())) {
-            List<SaleVO> sales = Beans.getList(source.getSales());
-            sales.forEach(g -> fillDefaultProperties(savedTrip, g));
-            sales = saleService.saveAllByTripId(savedTrip.getId(), sales);
-            savedTrip.setSales(sales);
-        } else if (source.getSale() != null) {
-            SaleVO sale = source.getSale();
-            fillDefaultProperties(savedTrip, sale);
-            List<SaleVO> sales = saleService.saveAllByTripId(savedTrip.getId(), ImmutableList.of(sale));
-            savedTrip.setSale(sales.get(0));
-        } else {
-            // Remove all
-            saleService.saveAllByTripId(savedTrip.getId(), ImmutableList.of());
-        }
+        // Save or update parent entity
+        saveParent(savedTrip);
 
         // Save measurements
         if (source.getMeasurementValues() != null) {
@@ -266,18 +256,50 @@ public class TripServiceImpl implements TripService {
             savedTrip.setOperationGroups(operationGroups);
         }
 
+        // Save sales
+        if (CollectionUtils.isNotEmpty(source.getSales())) {
+            List<SaleVO> sales = Beans.getList(source.getSales());
+            sales.forEach(sale -> fillDefaultProperties(savedTrip, sale));
+            // fill sale products but only if there is only one sale
+            if (sales.size() == 1)
+                fillSaleProducts(savedTrip, sales.get(0));
+            sales = saleService.saveAllByTripId(savedTrip.getId(), sales);
+            savedTrip.setSales(sales);
+        } else if (source.getSale() != null) {
+            SaleVO sale = source.getSale();
+            fillDefaultProperties(savedTrip, sale);
+            fillSaleProducts(savedTrip, sale);
+            List<SaleVO> sales = saleService.saveAllByTripId(savedTrip.getId(), ImmutableList.of(sale));
+            savedTrip.setSale(sales.get(0));
+        } else {
+            // Remove all
+            saleService.saveAllByTripId(savedTrip.getId(), ImmutableList.of());
+        }
+
+        // Emit event
+        if (isNew) {
+            eventPublisher.publishEvent(new DataEntityCreatedEvent(Trip.class.getSimpleName(), savedTrip));
+        } else {
+            eventPublisher.publishEvent(new DataEntityUpdatedEvent(Trip.class.getSimpleName(), savedTrip));
+        }
+
+        return savedTrip;
+    }
+
+    private void saveParent(TripVO trip) {
+
         // Landing
         boolean createLanding = false;
-        if (savedTrip.getLandingId() != null) {
+        if (trip.getLandingId() != null) {
 
             // update update_date on landing
-            LandingVO landing = landingRepository.get(savedTrip.getLandingId());
+            LandingVO landing = landingRepository.get(trip.getLandingId());
 
             if (landing.getTripId() == null) {
-                landing.setTripId(savedTrip.getId());
+                landing.setTripId(trip.getId());
             }
-            landing.setDateTime(savedTrip.getReturnDateTime());
-            landing.setObservers(Beans.getSet(savedTrip.getObservers()));
+            landing.setDateTime(trip.getReturnDateTime());
+            landing.setObservers(Beans.getSet(trip.getObservers()));
 
             landingRepository.save(landing);
 
@@ -290,10 +312,10 @@ public class TripServiceImpl implements TripService {
         }
 
         // ObservedLocation
-        if (savedTrip.getObservedLocationId() != null) {
+        if (trip.getObservedLocationId() != null) {
 
             // update update_date on observed_location
-            ObservedLocationVO observedLocation = observedLocationDao.get(savedTrip.getObservedLocationId());
+            ObservedLocationVO observedLocation = observedLocationDao.get(trip.getObservedLocationId());
             observedLocationDao.save(observedLocation);
 
             if (createLanding) {
@@ -301,28 +323,20 @@ public class TripServiceImpl implements TripService {
                 LandingVO landing = new LandingVO();
 
                 landing.setObservedLocationId(observedLocation.getId());
-                landing.setTripId(savedTrip.getId());
+                landing.setTripId(trip.getId());
                 landing.setProgram(observedLocation.getProgram());
                 landing.setLocation(observedLocation.getLocation());
-                landing.setVesselSnapshot(savedTrip.getVesselSnapshot());
-                landing.setDateTime(savedTrip.getReturnDateTime());
-                landing.setObservers(Beans.getSet(savedTrip.getObservers()));
+                landing.setVesselSnapshot(trip.getVesselSnapshot());
+                landing.setDateTime(trip.getReturnDateTime());
+                landing.setObservers(Beans.getSet(trip.getObservers()));
                 landing.setRecorderDepartment(observedLocation.getRecorderDepartment());
 
                 LandingVO savedLanding = landingRepository.save(landing);
-                savedTrip.setLandingId(savedLanding.getId());
+                trip.setLandingId(savedLanding.getId());
             }
 
         }
 
-        // Emit event
-        if (isNew) {
-            eventPublisher.publishEvent(new DataEntityCreatedEvent(Trip.class.getSimpleName(), savedTrip));
-        } else {
-            eventPublisher.publishEvent(new DataEntityUpdatedEvent(Trip.class.getSimpleName(), savedTrip));
-        }
-
-        return savedTrip;
     }
 
     private void fillPhysicalGearMeasurementsFromOperationGroups(PhysicalGearVO physicalGear, List<OperationGroupVO> operationGroups) {
@@ -433,6 +447,16 @@ public class TripServiceImpl implements TripService {
         DataBeans.setDefaultRecorderPerson(sale, parent.getRecorderPerson());
         DataBeans.setDefaultVesselFeatures(sale, parent.getVesselSnapshot());
 
+        if (sale.getStartDateTime() == null) {
+            sale.setStartDateTime(parent.getReturnDateTime());
+        }
+        if (sale.getSaleLocation() == null || sale.getSaleLocation().getId() == null) {
+            sale.setSaleLocation(parent.getReturnLocation());
+        }
+        if (sale.getSaleType() == null || sale.getSaleType().getId() == null) {
+            sale.setSaleType(referentialService.findByUniqueLabel(SaleType.class.getSimpleName(), SaleTypeEnum.OTHER.getLabel()));
+        }
+
         sale.setTripId(parent.getId());
     }
 
@@ -457,5 +481,22 @@ public class TripServiceImpl implements TripService {
         DataBeans.setDefaultRecorderPerson(measurement, parent.getRecorderPerson());
 
         measurement.setEntityName(VesselUseMeasurement.class.getSimpleName());
+    }
+
+    void fillSaleProducts(TripVO parent, SaleVO sale) {
+
+        // Fill sale products list with parent trip products, from operation group's product and packets
+        if (CollectionUtils.isNotEmpty(parent.getOperationGroups())) {
+            List<ProductVO> saleProducts = new ArrayList<>();
+            parent.getOperationGroups().forEach(operationGroup -> {
+                operationGroup.getProducts().forEach(product -> saleProducts.addAll(product.getSaleProducts()));
+                operationGroup.getPackets().forEach(packet -> saleProducts.addAll(
+                    // Applying packet id to product.batchId
+                    packet.getSaleProducts().stream().peek(saleProduct -> saleProduct.setBatchId(packet.getId())).collect(Collectors.toList())
+                ));
+            });
+            sale.setProducts(saleProducts);
+        }
+
     }
 }
